--- a/ADMIN/src/pages/css/nav.css
+++ b/ADMIN/src/pages/css/nav.css
@@ -42,10 +42,14 @@ body{
     display: flex;
     align-items: center;
     color:#ff0099;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 .left span {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.left a {
+    color: #ff0099;
+    text-decoration: none;
 }
 .logo {
     font-size: 34px;
