--- a/ADMIN/src/pages/css/sidebar.css
+++ b/ADMIN/src/pages/css/sidebar.css
@@ -1,9 +1,9 @@
 .sideBar {
-    width: 300px;
+    width: 235px;
     background-color: #fefcfc;
     padding: 20px;
     border-right: 1px solid #ddd;
-    height: 100vh;
+    height: auto;
 }
 
 .sideBar ul {
@@ -22,6 +22,12 @@
     color: white;
     border-radius: 10px;
 }
+
+.sideBar ul a {
+    text-decoration: none;
+    color: white;
+}
+
 .sideBar ul li:hover {
     color: #0d0d0d;
     background-color: #e8ccde;
