--- a/ADMIN/src/pages/css/customer-detail-modal.css
+++ b/ADMIN/src/pages/css/customer-detail-modal.css
@@ -13,11 +13,14 @@
 .modal-content {
     background: white;
     padding: 20px;
-    border-radius: 8px;
-    width: 800px;
+    border-radius: 20px;
+    width: 600px;
     max-width: 90%;
+    max-height: 90%;
+    overflow-y: auto;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     position: relative;
+    /* font-size: small; */
 }
 
 .close-button {
@@ -31,18 +34,32 @@
 }
 
 .modal-sections {
-    display: flex;
     justify-content: space-between;
+    height: 100%; /* Ensure the sections take full height */
 }
 
 .modal-section {
-    flex: 1;
+    /* flex: 1;
     margin-right: 20px;
-    border: 1px solid #ddd;
+    border: 1px solid #ddd; */
+    margin: 0 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    padding: 0 30px 0 30px;
 }
 
 .modal-section:last-child {
     margin-right: 0;
+}
+
+.divider {
+    width: inherit;
+    background-color: #ccc;
+    height: 1px;
+    margin: 0 20px;
+    /* padding: 10px; */
 }
 
 .modal-section h3 {
@@ -64,14 +81,33 @@ h3 {
 
 .update-button {
     margin-top: 10px;
+    margin-bottom: 10px;
     padding: 8px 12px;
-    background-color: #007bff;
+    background-color: #f09;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    align-self: center;
+    
 }
 
 .update-button:hover {
-    background-color: #0056b3;
+    background-color: #c93c91;
+}
+
+.save-button {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 8px 12px;
+    background-color: #ff0099;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    align-self: center;
+}
+
+.save-button:hover {
+    background-color: #c93c91;
 }
