--- a/ADMIN/src/pages/css/staff-mgmt.css
+++ b/ADMIN/src/pages/css/staff-mgmt.css
@@ -29,6 +29,20 @@ h1 {
     font-family: 'Arial', 'Courier', 'monospace';
 }
 
+.add-staff-button {
+    padding: 10px 20px;
+    background-color: #f09;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: large;
+}
+
+.add-staff-button:hover {
+    background-color: #a31b1b;
+}
+
 .table-box {
     border-radius: 10px;
     width: 100%;
@@ -45,6 +59,14 @@ h1 {
     padding-bottom: 30px;
     width: 100%;
     white-space: nowrap;
+}
+
+.property-dropdown {
+    margin-right: 10px;
+    padding: 8px 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
 }
 
 .search-input {
